Fix navbar expand burger toggle so it appears earlier to prevent text wrapping in the navbar links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <header>
     <!-- Logo and text in Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom bg-info no-gutters">
+    <nav class="navbar navbar-expand-custom navbar-light navbar-custom bg-info no-gutters">
       <a class="navbar-brand" href="index.html">
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
@@ -138,7 +138,7 @@
         <div class="card shadow text-center">
           <i class="fas fa-gamepad fa-5x icon-center"></i>
           <div class="card-body">
-            <h5 class="card-title">Games <span class="badge badge-pill badge-danger"><i class="fas fa-play-circle"></i> Try it!</span></h5>
+            <h5 class="card-title">Games <a href="game.html"><span class="badge badge-pill badge-danger"><i class="fas fa-play-circle"></i> Try it!</span></a></h5>
             <br>
             <div class="dropdown show">
               <a class="btn dropdown--color dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
