--- a/help.html
+++ b/help.html
@@ -23,7 +23,7 @@
 <body>
   <header>
     <!-- Logo and text in Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom bg-info no-gutters">
+    <nav class="navbar navbar-expand-custom navbar-light navbar-custom bg-info no-gutters">
       <a class="navbar-brand" href="index.html">
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
