--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
           <h1>Contact Us <i class="fas fa-envelope-open"></i></h1>
           <p class="head-text">Feel free to drop us an email and tell us about the type of calculators you'd like to see appear on our site. Just fill out
             the form below.</p>
-          <p class="head-text">We're set up to accomodate multiple calculators for various physics principles and while we're just starting out,
+          <p class="head-text">We're set up to accommodate multiple calculators for various physics principles and while we're just starting out,
             you may have some ideas that you'd like us to work on for the next calculator.</p>
           <p class="head-text my-0">Our goal at Physics Code is to keep all our calculators free and set up in a logical order for your convenience. We use large cards and
             symbols to help highlight the variable required. We look forward to helping you through your physics courses at school and university.</p>
@@ -191,6 +191,7 @@
     })();
   </script>
   <script src="assets/scripts/sendemail.js"></script>
+  <script src="assets/scripts/dependencies.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="HYRkFRRQ"></script>
 
