--- a/help.html
+++ b/help.html
@@ -76,7 +76,7 @@
           <p class="head-text">A dilemma zone exists where a vehicle would not be able to safely pass through the
             intersection nor stop before the stop line if a signal light were to turn yellow on approach.</p>
           <p class="head-text">The risk involved to other drivers as well as the driver of the vehicle is significant in a dilemma zone situation. to date, no effective
-            calcuator is available online to estimate if a dilemma zone exists at a particular intersection. This help file will give an understanding of the variables
+            calculator is available online to estimate if a dilemma zone exists at a particular intersection. This help file will give an understanding of the variables
             required and how the results can be evaluated.</p>
         </div>
       </div>
@@ -233,7 +233,7 @@
               provided a chance to estimate the size of various intersections around the world. Although, ultimately, the next best method would be to have the
               engineering plans of the intersection. If these are available you can use the dilemma zone calculator to plot out the location of dilemma and option
               zones. Typically you'd measure the intersection in metres. However, our calculator can convert yards into metres for you.</p>
-            <p>An intersection is measured from stop line to opposite stop line. Currently, the calculator is not geared for perpindicular roads.
+            <p>An intersection is measured from stop line to opposite stop line. Currently, the calculator is not geared for perpendicular roads.
               \[dist_{intersection}\]</p>
           </div>
         </div>
@@ -491,11 +491,11 @@ This is because the calculation includes some randomness to account for realisti
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="assets/scripts/dependencies.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="HYRkFRRQ"></script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  <script src="assets/scripts/dependencies.js"></script>
 </body>
 
 </html>
