Delete obsolete files of test_yourself and replace with refactored versions

--- a/calculator.html
+++ b/calculator.html
@@ -408,7 +408,7 @@
             <p>The total distance from the stop-line required for the vehicle coming to a complete halt : <br>
               <strong><span id="stoppingDistance"></span></strong>
             </p>
-            <p>The Maximum Distance the vehicle is from stopline : <br>
+            <p>The Maximum Distance the vehicle is from stop-line : <br>
               <strong><span id="maxDistance"></span></strong>
             </p>
             <p>Numbers that are negative indicate a dilemma zone. Positive numbers indicate an option zone : <br>
