--- a/help.html
+++ b/help.html
@@ -232,7 +232,7 @@
             <p>There are a few methods to measuring intersection distances, the most precise method is being there. However, scaled maps on Google and Bing have
               provided a chance to estimate the size of various intersections around the world. Although, ultimately, the next best method would be to have the
               engineering plans of the intersection. If these are available you can use the dilemma zone calculator to plot out the location of dilemma and option
-              zones. Typically you'd measure the intersection in metres. However, our calculator can convert yards into metres for you.</p>
+              zones. Typically, you'd measure the intersection in metres. However, our calculator can convert yards into metres for you.</p>
             <p>An intersection is measured from stop line to opposite stop line. Currently, the calculator is not geared for perpendicular roads.
               \[dist_{intersection}\]</p>
           </div>
