Add disabled button for submit with no key entry into input

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -435,7 +435,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
               </div>
-              <input type="text" onkeypress="return isNumberKey(event)" oninput="validate(this)" id="mapOneUserInput" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+              <input type="text" onkeyup="checkvalid(this)" onkeypress="return isNumberKey(event)" oninput="validate(this)" id="mapOneUserInput" class="form-control" aria-label="input value for your zone" placeholder="e.g 12.34">
               <div class="input-group-append">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
@@ -447,7 +447,7 @@
           <div><span id="mapOneResultThree"></span></div>
         </div> <!-- End of the first modal-->
         <div class="modal-footer">
-          <input type="submit" id="mapOneSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit">
+          <input type="submit" id="mapOneSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit" disabled>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
@@ -494,7 +494,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
               </div>
-              <input type="text" onkeypress="return isNumberKey(event)" oninput="validate(this)" id="mapTwoUserInput" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+              <input type="text" onkeyup="checkvalid(this)" onkeypress="return isNumberKey(event)" oninput="validate(this)" id="mapTwoUserInput" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
               <div class="input-group-append">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
@@ -506,7 +506,7 @@
           <div><span id="mapTwoResultThree"></span></div>
         </div> <!-- End of second modal-->
         <div class="modal-footer">
-          <input type="submit" id="mapTwoSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit">
+          <input type="submit" id="mapTwoSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit" disabled>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
@@ -553,7 +553,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
               </div>
-              <input type="text" onkeypress="return isNumberKey(event)" oninput="validate(this)" id="mapThreeUserInput" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+              <input type="text" onkeyup="checkvalid(this)" onkeypress="return isNumberKey(event)" oninput="validate(this)" id="mapThreeUserInput" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
               <div class="input-group-append">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
@@ -565,7 +565,7 @@
           <div><span id="mapThreeResultThree"></span></div>
         </div><!-- End of Modal three-->
         <div class="modal-footer">
-          <input type="submit" id="mapThreeSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit">
+          <input type="submit" id="mapThreeSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit" disabled>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
@@ -612,7 +612,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
               </div>
-              <input type="text" onkeypress="return isNumberKey(event)" oninput="validate(this)" id="mapFourUserInput" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+              <input type="text" onkeyup="checkvalid(this)" onkeypress="return isNumberKey(event)" oninput="validate(this)" id="mapFourUserInput" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
               <div class="input-group-append">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
@@ -624,7 +624,7 @@
           <div><span id="mapFourResultThree"></span></div>
         </div> <!-- End of modal Four-->
         <div class="modal-footer">
-          <input type="submit" id="mapFourSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit">
+          <input type="submit" id="mapFourSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit" disabled>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
@@ -671,7 +671,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Your Calculation</span>
               </div>
-              <input type="text" onkeypress="return isNumberKey(event)" oninput="validate(this)" id="mapFiveUserInput" class="form-control" min="0" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+              <input type="text" onkeyup="checkvalid(this)" onkeypress="return isNumberKey(event)" oninput="validate(this)" id="mapFiveUserInput" class="form-control" min="0" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
               <div class="input-group-append">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
@@ -683,7 +683,7 @@
           <div><span id="mapFiveResultThree"></span></div>
         </div> <!-- End of modal five-->
         <div class="modal-footer">
-          <input type="submit" id="mapFiveSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit">
+          <input type="submit" id="mapFiveSubmit" class="btn btn-success btn-submit" value="&#x2713; Submit" disabled>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
