Fix unsubmittable inputs after current button pushed in test_yourself.html

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -228,7 +228,7 @@
             <div class="text-center mybuttons">
               <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" id="mapOne" data-toggle="modal" data-target="#map-1-scene-1">
                 <i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <span class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" id="mapOneCurrent" data-toggle="modal" data-target="#map-1-scene-1" disabled><i class="fas fa-charging-station fa2x"></i> Current</span>
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" id="mapOneCurrent" data-toggle="modal" data-target="#map-1-scene-1"><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -267,7 +267,7 @@
             <div class="text-center mybuttons">
               <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" id="mapTwo" data-toggle="modal" data-target="#map-2-scene-1">
                 <i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <span class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" id="mapTwoCurrent" data-toggle="modal" data-target="#map-2-scene-1" disabled><i class="fas fa-charging-station fa2x"></i> Current</span>
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" id="mapTwoCurrent" data-toggle="modal" data-target="#map-2-scene-1"><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -306,7 +306,7 @@
             <div class="text-center mybuttons">
               <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" id="mapThree" data-toggle="modal" data-target="#map-3-scene-1">
                 <i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <span class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" id="mapThreeCurrent" data-toggle="modal" data-target="#map-3-scene-1" disabled><i class="fas fa-charging-station fa2x"></i> Current</span>
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" id="mapThreeCurrent" data-toggle="modal" data-target="#map-3-scene-1"><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -345,7 +345,7 @@
             <div class="text-center mybuttons">
               <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" id="mapFour" data-toggle="modal" data-target="#map-4-scene-1">
                 <i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <span class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" id="mapFourCurrent" data-toggle="modal" data-target="#map-4-scene-1" disabled><i class="fas fa-charging-station fa2x"></i> Current</span>
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" id="mapFourCurrent" data-toggle="modal" data-target="#map-4-scene-1"><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -384,7 +384,7 @@
             <div class="text-center mybuttons">
               <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" id="mapFive" data-toggle="modal" data-target="#map-5-scene-1">
                 <i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <span class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" id="mapFiveCurrent" data-toggle="modal" data-target="#map-5-scene-1" disabled><i class="fas fa-charging-station fa2x"></i> Current</span>
+              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded no-click-span" id="mapFiveCurrent" data-toggle="modal" data-target="#map-5-scene-1"><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
