Remove Current button due to poor user expereince

--- a/game.html
+++ b/game.html
@@ -94,11 +94,11 @@
   </section>
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 content-div">
+      <div class="col-lg-3 content-div">
       </div>
       <!-- Reaction Time Game Card-->
-      <div class="col-lg-4 content-div">
-        <div class="card shadow">
+      <div class="col-lg-6 content-div">
+        <div class="card game-card shadow">
           <div class="container text-center">
             <span id="redLightStart" class="red_light_icon"><br><i class="fas fa-lightbulb fa-7x"></i></span>
             <span id="greenLightStop" class="icon_hide_greenLight green_light_icon"><br><i class="fas fa-lightbulb fa-7x"></i></span>
@@ -107,17 +107,16 @@
             <h5 class="card-title heading-center" id="remove_start">Push the Start button
             </h5>
             <h5 class="card-title heading-center remove_start" id="ready_to_brake">Get ready to brake!</h5>
+            
             <br>
             <div class="container text-center">
               <button class="btn btn-danger btn-lg btn--padding" id="start_button" onclick="makeGreen(); setTimerAmount()">Start</button>
               <button type="submit" class="btn btn-danger btn-lg btn_hide_brakes" id="brake_button">Brakes</button>
-
-
             </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-4 content-div">
+      <div class="col-lg-3 content-div">
 
       </div>
     </div>
